feat(web): create Material draft preview (#94) (#142)
